# autotools-parser

./: Cargo.toml  README.md
examples/: analysis.rs  count_echo.rs  node.rs  parsing_autoconf.rs  parsing_automake.rs  parsing_input.rs  parsing_shell.rs  partial_expansion.rs
src/: analyzer.rs  ast.rs  autoconf.rs  automake.rs  lexer.rs  lib.rs  m4_macro.rs  parse.rs  preprocess.rs  token.rs
src/ast/: am.rs  builder.rs  condition.rs  minimal.rs  node.rs  sh.rs
src/ast/builder/: default_builder.rs  empty_builder.rs  minimal_builder.rs  node_builder.rs
src/autoconf/: iter.rs
src/parse/: autoconf.rs  automake.rs  iter.rs  shell.rs
src/preprocess/: rewrite_quotes.rs
tests/: and_or.rs  arithmetic.rs  backticked.rs  brace.rs  case.rs  command.rs  compound_command.rs  for.rs  function.rs  heredoc.rs  if.rs  lexer.rs  loop.rs  m4_quotes.rs  macro.rs  minimal.rs  minimal_util.rs  parameter.rs  parse.rs  parse_support.rs  pipeline.rs  positional.rs  redirect.rs  simple_command.rs  subshell.rs  subst.rs  word.rs
