[package]
name = "autoconf-parser"
version = "0.1.1"
edition = "2021"
authors = ["Ivan Petkov <ivanppetkov@gmail.com>", "kui8shi <gbiifvrc517@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/kui8shi/autoconf-parser"
homepage = "https://github.com/kui8shi/autoconf-parser"
documentation = "https://docs.rs/autoconf-parser/"
keywords = ["shell", "parser", "parsing", "autoconf"]
categories = ["parser-implementations"]
description = """
A library for parsing configure.ac written in autoconf language (shell + m4).
"""

[features]
# FIXME(breaking): technically breaking if we remove any features
# nightly = []
clippy = []

[dependencies]
grep = "0.3.2"
lazy_static = "1.5.0"
regex = "1.11.1"
void = "1"

[dev-dependencies]
owned_chars = "0.3"

[badges]
travis-ci = { repository = "kui8shi/autoconf-parser" }
appveyor = { repository = "kui8shi/autoconf-parser" }
is-it-maintained-issue-resolution = { repository = "kui8shi/autoconf-parser" }
is-it-maintained-open-issues = { repository = "kui8shi/autoconf-parser" }
codecov = { repository = "kui8shi/autoconf-parser" }
