[package]
name = "autotools-parser"
version = "0.1.1"
edition = "2021"
authors = ["Ivan Petkov <ivanppetkov@gmail.com>", "kui8shi <gbiifvrc517@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/kui8shi/autotools-parser"
homepage = "https://github.com/kui8shi/autotools-parser"
documentation = "https://docs.rs/autotools-parser/"
keywords = ["shell", "parser", "parsing", "autotools"]
categories = ["parser-implementations"]
description = """
A library for parsing files configure.ac (shell + m4) and Makefile.am.
"""

[features]
# FIXME(breaking): technically breaking if we remove any features
# nightly = []
clippy = []

[dependencies]
grep = "0.3.2"
lazy_static = "1.5.0"
regex = "1.11.1"
slab = "0.4.9"
void = "1"

[badges]
travis-ci = { repository = "kui8shi/autotools-parser" }
appveyor = { repository = "kui8shi/autotools-parser" }
is-it-maintained-issue-resolution = { repository = "kui8shi/autotools-parser" }
is-it-maintained-open-issues = { repository = "kui8shi/autotools-parser" }
codecov = { repository = "kui8shi/autotools-parser" }
